--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CryptoMinded</title>
+    
+    <title>Cryptominded - The World's Top Crypto Currencies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
